@@ -11,3 +11,4 @@
 
 2018-04-19: 2.0.3 (<unknown>)
 - Reconfgiure SBAS after cold-restart and factory-reset
+- Handle different latitude, longitude and altitude resolutions correctly
